welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: unclosed character literal
  var x : String='7:00'
                 ^alarmClock:2: error: Non-zero integral values may not have a leading zero.
  var x : String='7:00'
                    ^alarmClock:2: error: unclosed character literal
  var x : String='7:00'
                      ^alarmClock:5: error: unclosed character literal
      x= 'off'
             ^alarmClock:7: error: unclosed character literal
      	x= 'off'
               ^alarmClock:9: error: unclosed character literal
      	x= '10:00'
           ^alarmClock:9: error: Non-zero integral values may not have a leading zero.
      	x= '10:00'
               ^alarmClock:9: error: unclosed character literal
      	x= '10:00'
                 ^alarmClock:13: error: unclosed character literal
      	x= '10:00'
           ^alarmClock:13: error: Non-zero integral values may not have a leading zero.
      	x= '10:00'
               ^alarmClock:13: error: unclosed character literal
      	x= '10:00'
                 ^alarmClock:15: error: unclosed character literal
      	x= '10:00'
           ^alarmClock:15: error: Non-zero integral values may not have a leading zero.
      	x= '10:00'
               ^alarmClock:15: error: unclosed character literal
      	x= '10:00'
                 ^alarmClock:2: error: illegal start of simple expression
  var x : String='7:00'
                 ^